updated purchase pending